# chad

./: Cargo.toml  Readme.md  Stuff.md  main  main.rs
client/: Cargo.toml
client/src/: chat.rs  client.rs  clientrs.rs  draw.rs  main.rs  parser.rs  screen_buffer.rs  tui.rs
client/src/screen/: chat_frame.rs  hint.rs  mod.rs  screen_buffer.rs
client/src/state/: action.rs  chat.rs  mod.rs  state.rs  state_manager.rs
client/src/ui/: dispatch.rs  mod.rs  ui_manager.rs
client/src/ui/page/: chat_page.rs  login_page.rs  mod.rs  widget.rs
client/src/widget/: mod.rs
server/: Cargo.toml
server/src/: main.rs  message.rs  server.rs
shared/: Cargo.toml
shared/src/: connection.rs  lib.rs  message.rs  parse.rs  parse_async.rs
src/: main.rs
