[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
chrono = "0.4.31"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
itertools = "0.12.0"
ratatui = "0.26.3"
shared = { path ="../shared" }
tokio = { version = "1.38.0", features = ["full"] }
